HpcExercise2/log.txt
:2:4: error: use of undeclared identifier 'gaxi'
{  gaxi
   ^
:8:9: error: use of undeclared identifier 'thid'
        temp[2*thid] = g_idata[2*thid]; // load input into shared memory  
               ^
:9:9: error: use of undeclared identifier 'thid'
        temp[2*thid+1] = g_idata[2*thid+1];  
               ^
:9:13: error: expected ']'
        temp[2*thid+1] = g_idata[2*thid+1];  
                   ^
:9:6: note: to match this '['
        temp[2*thid+1] = g_idata[2*thid+1];  
            ^
:15:7: error: use of undeclared identifier 'thid'
                if (thid < d)  
                    ^
:17:23: error: use of undeclared identifier 'thid'
                        int ai = offset*(2*thid+1)-1;  
                                           ^
:18:23: error: use of undeclared identifier 'thid'
                        int bi = offset*(2*thid+2)-1; 
                                           ^
:25:6: error: use of undeclared identifier 'thid'
        if (thid == 0) { temp[n - 1] = 0; } // clear the last element 
            ^
:31:7: error: use of undeclared identifier 'thid'
                if (thid < d)                       
                    ^
:33:23: error: use of undeclared identifier 'thid'
                        int ai = offset*(2*thid+1)-1;  
                                           ^
:34:23: error: use of undeclared identifier 'thid'
                        int bi = offset*(2*thid+2)-1; 
                                           ^
:42:12: error: use of undeclared identifier 'thid'
        g_odata[2*thid] = temp[2*thid]; // write results to device memory  
                  ^
:43:12: error: use of undeclared identifier 'thid'
        g_odata[2*thid+1] = temp[2*thid+1];  
                  ^
:43:16: error: expected ']'
        g_odata[2*thid+1] = temp[2*thid+1];  
                      ^
:43:9: note: to match this '['
        g_odata[2*thid+1] = temp[2*thid+1];  
               ^
